--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "npx webpack --config ./src/webpack.config.js --mode production",
     "dev": "npx webpack --config ./src/webpack.config.js --mode development --watch",
-    "test": "npx standard -- --passWihNoTests && npx jest -- --passWithNoTests"
+    "test": "npx standard --passWihNoTests && npx jest --passWithNoTests"
   },
   "author": "githubtraining",
   "license": "MIT",
